--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ font-family: 'Roboto', sans-serif;
 
 orange color: #e54a35;
 gray (border) color: #695d46;
+SDS Blue color: #27738B;
 */
 
 html, body {
@@ -16,6 +17,7 @@ html, body {
 }
 
 .header {
+    background-color: white;
     width: 100%;
     border-bottom: solid 2px black;
     display: flex;
@@ -60,6 +62,7 @@ html, body {
 .main {
     width: 100%;
     margin-bottom: 150px;
+
 }
 
 .site-footer {
@@ -78,9 +81,11 @@ html, body {
 }
 
 .panel {
+    background-color: white;
     border: 1px solid #695d46;
     padding: 10px;
     margin: auto;
+    box-shadow: 3px 3px 5px #888888;
 }
 
 .panel-header {
@@ -103,6 +108,24 @@ html, body {
 
 .primary .panel-header h2 {
     text-align: left;
+}
+
+.content {
+    padding: 5%;
+}
+
+.content p {
+    display: inline;
+}
+
+#profile-pic {
+    width: 28%;
+    float: left;
+    margin: 0% 5% 2% 0%;
+    /*border-radius: 50%;*/
+    box-shadow: 3px 3px 8px #888888;
+    /*border: 7px solid black;*/
+    border: 4px solid white;
 }
 
 .social {
