--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro|Roboto');
 
-/*font-family: 'Open Sans', sans-serif;
+/*Fonts
+------Fonts-------
+font-family: 'Open Sans', sans-serif;
 font-family: 'Source Sans Pro', sans-serif;
 font-family: 'Roboto', sans-serif;
 
+
+------Colors-------
 orange color: #e54a35;
 gray (border) color: #695d46;
 SDS Blue color: #27738B;
@@ -63,6 +67,7 @@ html, body {
 
 .main {
     width: 100%;
+    margin: auto;
     margin-bottom: 200px;
     display: inline-block;
 }
@@ -84,10 +89,10 @@ html, body {
 
 .panel {
     background-color: white;
-    /*border: 1px solid #695d46;*/
     padding: 10px;
-    margin: auto;
+    margin: 4%;
     box-shadow: 3px 8px 28px #888888;
+    display: inline-block;
 }
 
 .panel-header {
@@ -163,11 +168,46 @@ html, body {
     background-color: #e54a35;
 }
 
+input[type="text"], [type="email"] {
+    width: 96%;
+    margin: 2%;
+    box-sizing: border-box; 
+    border: none;
+    box-shadow: 0px 3px 10px #e2e2e2 inset;
+    border-radius: 3px;
+    padding: 7px;
+    outline: none;
+}
+
+
+textarea {
+    width: 96%;
+    margin: 2%;
+    box-sizing: border-box;
+    border: none;
+    box-shadow: 0px 3px 25px #e2e2e2 inset;
+    border-radius: 3px;
+    padding: 7px;
+    outline: none;
+}
+
+input[type="submit"] {
+    width: 33.33%;
+    margin: 2% 33.33%;
+    padding: 2%;
+    float: right;
+    border: 0px;
+    box-shadow: 3px 3px 10px #888888;
+    background-color: #e54a35;
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
+}
+
 .social {
-    /*float: left;*/
-    width: 60%;
-    margin: auto;
-    padding: 10px;
+    width: 50%;
+    margin: 5% 25% 5% 25%;
+    padding: 2%;
 }
 
 #icons {
@@ -184,7 +224,7 @@ html, body {
     width: 20%;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen  and (min-width : 800px) {
 
     #name {
         background-color: #e54a35;
@@ -236,10 +276,14 @@ html, body {
         text-align: left;
     }
 
+    .portfolio .row {
+        display: inline-block;
+    }
+
     .project {
         position: relative;
         width: 40%;
-        margin: 4%;
+        margin: 5%;
         float: left;
     }
 
@@ -266,6 +310,41 @@ html, body {
         margin: 0px auto;
         padding: 2px;
         background-color: #e54a35;
+    }
+
+    input[type="text"], [type="email"] {
+        width: 45%;
+        margin: 2%;
+        box-sizing: border-box; 
+        border: none;
+        box-shadow: 0px 3px 10px #e2e2e2 inset;
+        border-radius: 3px;
+        padding: 7px;
+        outline: none;
+    }
+
+    input[type="submit"] {
+        width: 20%;
+        margin: 2%;
+        padding: 2%;
+        float: right;
+        border: 0px;
+        box-shadow: 3px 3px 10px #888888;
+        background-color: #e54a35;
+        color: white;
+        font-family: 'Source Sans Pro', sans-serif;
+        font-weight: bold;
+    }
+
+    textarea {
+        width: 96%;
+        margin: 2%;
+        box-sizing: border-box;
+        border: none;
+        box-shadow: 0px 3px 25px #e2e2e2 inset;
+        border-radius: 3px;
+        padding: 7px;
+        outline: none;
     }
 
     .social {
